fuzz覆盖率添加
Signed-off-by: wangyb0625 <wangyibo38@huawei.com>

--- a/tests/sdk/transmission/fuzztest/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/BUILD.gn
@@ -52,5 +52,7 @@ group("fuzztest") {
     "streamcommondata_fuzzer:fuzztest",
     "streamdepacketizer_fuzzer:fuzztest",
     "streammsgmanager_fuzzer:fuzztest",
+    "transserverproxyextern_fuzzer:fuzztest",
+    "vtpstreamsocket_fuzzer:fuzztest",
   ]
 }
