--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -84,13 +84,14 @@ ohos_unittest("AuthTestMock") {
     "$dsoftbus_root_path/core/authentication/src/auth_tcp_connection.c",
     "$dsoftbus_root_path/core/authentication/src/virtual/auth_meta_manager_virtual.c",
     "$dsoftbus_root_path/core/bus_center/utils/src/lnn_state_machine.c",
-    "unittest/auth_connection_mock.cpp",
-    "unittest/auth_hichain_mock.cpp",
+    "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_connection_mock.cpp",
+    "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_hichain_mock.cpp",
     "unittest/auth_net_ledger_mock.cpp",
     "unittest/auth_test_enhance.cpp",
   ]
 
   include_dirs = [
+    "$dsoftbus_root_path/tests/core/bus_center/mock_common/include",
     "//base/security/device_auth/interfaces/innerkits",
     "$dsoftbus_root_path/core/authentication/include",
     "$dsoftbus_root_path/core/authentication/interface",
