--- a/tests/sdk/transmission/fuzztest/vtpstreamsocket_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/vtpstreamsocket_fuzzer/BUILD.gn
@@ -65,10 +65,20 @@ ohos_fuzztest("VtpStreamSocketFuzzTest") {
 
 ###############################################################################
 group("fuzztest") {
-  testonly = true
-  deps = [
-    # deps file
-    ":VtpStreamSocketFuzzTest",
-  ]
+  if (dsoftbus_feature_trans_udp == true) {
+    if (dsoftbus_feature_trans_udp_stream == true) {
+      if (!defined(ohos_lite)) {
+        testonly = true
+        deps = []
+        deps += [
+          # deps file
+          ":VtpStreamSocketFuzzTest",
+        ]
+      }
+    }
+  } else {
+    testonly = true
+    deps = []
+  }
 }
 ###############################################################################
