test: solve buscenter fuzz test crash
Signed-off-by: heyangbo <heyangbo1@huawei.com>

--- a/tests/adapter/fuzztest/BUILD.gn
+++ b/tests/adapter/fuzztest/BUILD.gn
@@ -16,6 +16,6 @@ group("fuzztest") {
   deps = [
     "softbusadapterhisysevent_fuzzer:fuzztest",
     "softbusadapterrange_fuzzer:fuzztest",
-    "softbusdecryptdata_fuzzer:SoftBusDecryptDataTest",
+    "softbusdecryptdata_fuzzer:SoftBusDecryptDataFuzzTest",
   ]
 }
