--- a/tests/core/common/dfx/hisysevent_adapter/unittest/BUILD.gn
+++ b/tests/core/common/dfx/hisysevent_adapter/unittest/BUILD.gn
@@ -37,6 +37,7 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
+      "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter",
     ]
     deps = [
       "$dsoftbus_root_path/core/common:softbus_utils",
