add BLE discovery unit test case using gmock
Signed-off-by: wuchunbo <wuchunbo1@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -30,6 +30,7 @@ group("unittest") {
     deps += [
       "ble/dispatcher:unittest",
       "ble/softbus_ble:unittest",
+      "ble/softbus_ble_mock:unittest",
     ]
   }
   if (dsoftbus_feature_disc_coap) {
