--- a/tests/core/common/BUILD.gn
+++ b/tests/core/common/BUILD.gn
@@ -11,12 +11,28 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("fuzztest") {
-  testonly = true
-  deps = [ "fuzztest/softbuslog_fuzzer:fuzztest" ]
-}
+import("//build/test.gni")
+import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 group("unittest") {
   testonly = true
-  deps = [ "unittest:SoftBusLogTest" ]
+  deps = [
+    "anonymize:unittest",
+    "dfx/hisysevent_adapter/unittest:unittest",
+    "log:unittest",
+    "sequence_verification:unittest",
+    "utils:unittest",
+  ]
+}
+
+group("fuzztest") {
+  testonly = true
+  deps = [
+    "dfx/hidumper_adapter/fuzztest:fuzztest",
+    "dfx/hisysevent_adapter/fuzztest:fuzztest",
+    "json_utils:fuzztest",
+    "log:fuzztest",
+    "message_handler:fuzztest",
+    "utils/fuzztest:fuzztest",
+  ]
 }
