--- a/tests/core/common/utils/BUILD.gn
+++ b/tests/core/common/utils/BUILD.gn
@@ -17,7 +17,7 @@ if (defined(ohos_lite)) {
   import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
   if (ohos_build_type == "debug") {
-    unittest("softbus_utils_test") {
+    unittest("SoftbusUtilsTest") {
       output_extension = "bin"
       output_dir = "$root_out_dir/tests/unittest/dsoftbus"
       sources = [ "unittest/softbus_utils_test.cpp" ]
@@ -34,7 +34,7 @@ if (defined(ohos_lite)) {
   import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
   module_output_path = "dsoftbus/common"
-  ohos_unittest("softbus_utils_test") {
+  ohos_unittest("SoftbusUtilsTest") {
     module_out_path = module_output_path
     sources = [ "unittest/softbus_utils_test.cpp" ]
 
@@ -78,8 +78,8 @@ if (defined(ohos_lite)) {
   group("unittest") {
     testonly = true
     deps = [
+      ":SoftbusUtilsTest",
       ":SqliteTest",
-      ":softbus_utils_test",
       "permission_state_test:PermissionsStateTest",
     ]
   }
