--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -47,16 +47,10 @@ if (defined(ohos_lite)) {
   import("//foundation/communication/dsoftbus/dsoftbus.gni")
   defines += [ "HAVE_PRO = 0" ]
   module_output_path = "dsoftbus/adapter"
-  ohos_unittest("AdapterTest") {
+
+  ohos_unittest("AdapterCryptTest") {
     module_out_path = module_output_path
-    sources = [
-      "dsoftbus_crypto_test.cpp",
-      "dsoftbus_other_test.cpp",
-      "softbus_adapter_range_test.cpp",
-      "softbus_dfx_test.cpp",
-      "softbus_socket_test.cpp",
-      "softbus_thread_test.cpp",
-    ]
+    sources = [ "dsoftbus_crypto_test.cpp" ]
     include_dirs = [
       "$dsoftbus_root_path/adapter/common/include",
       "$dsoftbus_root_path/core/common/include/",
@@ -80,8 +74,150 @@ if (defined(ohos_lite)) {
       ]
     }
   }
+
+  ohos_unittest("AdapterDfxTest") {
+    module_out_path = module_output_path
+    sources = [ "softbus_dfx_test.cpp" ]
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include/",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//third_party/bounds_checking_function/include",
+    ]
+    deps = [
+      "//foundation/communication/dsoftbus/adapter:softbus_adapter",
+      "//third_party/bounds_checking_function:libsec_static",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
+  ohos_unittest("AdapterOtherTest") {
+    module_out_path = module_output_path
+    sources = [ "dsoftbus_other_test.cpp" ]
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include/",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//third_party/bounds_checking_function/include",
+    ]
+    deps = [
+      "//foundation/communication/dsoftbus/adapter:softbus_adapter",
+      "//third_party/bounds_checking_function:libsec_static",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
+  ohos_unittest("AdapterRangeTest") {
+    module_out_path = module_output_path
+    sources = [ "softbus_adapter_range_test.cpp" ]
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include/",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//third_party/bounds_checking_function/include",
+    ]
+    deps = [
+      "//foundation/communication/dsoftbus/adapter:softbus_adapter",
+      "//third_party/bounds_checking_function:libsec_static",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
+  ohos_unittest("AdapterSocketTest") {
+    module_out_path = module_output_path
+    sources = [ "softbus_socket_test.cpp" ]
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include/",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//third_party/bounds_checking_function/include",
+    ]
+    deps = [
+      "//foundation/communication/dsoftbus/adapter:softbus_adapter",
+      "//third_party/bounds_checking_function:libsec_static",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+  ohos_unittest("AdapterThreadTest") {
+    module_out_path = module_output_path
+    sources = [ "softbus_thread_test.cpp" ]
+    include_dirs = [
+      "$dsoftbus_root_path/adapter/common/include",
+      "$dsoftbus_root_path/core/common/include/",
+      "$dsoftbus_root_path/interfaces/kits/common",
+      "//third_party/bounds_checking_function/include",
+    ]
+    deps = [
+      "//foundation/communication/dsoftbus/adapter:softbus_adapter",
+      "//third_party/bounds_checking_function:libsec_static",
+      "//third_party/googletest:gtest_main",
+    ]
+    if (is_standard_system) {
+      external_deps = [
+        "c_utils:utils",
+        "hiviewdfx_hilog_native:libhilog",
+      ]
+    } else {
+      external_deps = [
+        "c_utils:utils",
+        "hilog:libhilog",
+      ]
+    }
+  }
+
   group("unittest") {
     testonly = true
-    deps = [ ":AdapterTest" ]
+    deps = [
+      ":AdapterCryptTest",
+      ":AdapterDfxTest",
+      ":AdapterOtherTest",
+      ":AdapterRangeTest",
+      ":AdapterSocketTest",
+      ":AdapterThreadTest",
+    ]
   }
 }
