--- a/tests/sdk/bus_center/fuzztest/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/BUILD.gn
@@ -21,6 +21,7 @@ group("fuzztest") {
     "getlocalnodedeviceinfo_fuzzer:GetLocalNodeDeviceInfoFuzzTest",
     "getnodekeyinfo_fuzzer:GetNodeKeyInfoFuzzTest",
     "getnodekeyinfoinner_fuzzer:GetNodeKeyInfoInnerFuzzTest",
+    "ispassseqcheck_fuzzer:IsPassSeqCheckFuzzTest",
     "joinlnn_fuzzer:JoinLNNFuzzTest",
     "joinmetanode_fuzzer:JoinMetaNodeFuzzTest",
     "joinmetanodeinner_fuzzer:JoinMetaNodeInnerFuzzTest",
@@ -30,6 +31,7 @@ group("fuzztest") {
     "refreshlnn_fuzzer:RefreshLNNFuzzTest",
     "regnodedevicestatecb_fuzzer:RegNodeDeviceStateCbFuzzTest",
     "setnodedatachangeflag_fuzzer:SetNodeDataChangeFlagFuzzTest",
+    "setnodedatachangeflaginner_fuzzer:SetNodeDataChangeFlagInnerFuzzTest",
     "shiftlnngear_fuzzer:ShiftLnnGearFuzzTest",
     "softbusclientmanager_fuzzer:SoftBusClientManagerFuzzTest",
     "starttimesync_fuzzer:StartTimeSyncFuzzTest",
