ut: add bluetooth adapter unit tests
Signed-off-by: songzhengteng <songzhengteng@huawei.com>
Change-Id: I9a4fa8c6c8fd06c55e16054ff139883563e8ef49

--- a/tests/adapter/bluetooth/BUILD.gn
+++ b/tests/adapter/bluetooth/BUILD.gn
@@ -25,6 +25,9 @@ ohos_unittest("BluetoothAdapterTest") {
   sources = [
     "adapter_bt_utils_test.cpp",
     "bluetooth_mock.cpp",
+    "softbus_adapter_ble_gatt_client_test.cpp",
+    "softbus_adapter_ble_gatt_server_test.cpp",
+    "softbus_adapter_ble_gatt_test.cpp",
     "softbus_adapter_bt_common_test.cpp",
   ]
 
