--- a/tests/core/discovery/coap/unittest/BUILD.gn
+++ b/tests/core/discovery/coap/unittest/BUILD.gn
@@ -29,11 +29,16 @@ ohos_unittest("DiscoveryCoapDiscNstackxAdapterTest") {
     "//foundation/communication/dsoftbus/core/discovery/interface",
     "//foundation/communication/dsoftbus/core/discovery/coap/include",
     "//foundation/communication/dsoftbus/core/discovery/coap/src",
+    "//foundation/communication/dsoftbus/interfaces/kits/common",
+    "//foundation/communication/dsoftbus/components/nstackx/nstackx_util/interface",
     "//foundation/communication/dsoftbus/core/bus_center/interface",
     "//foundation/communication/dsoftbus/core/bus_center/lnn/lane_hub/lane_manager/include",
     "//foundation/communication/dsoftbus/adapter/common/include",
     "//foundation/communication/dsoftbus/adapter/default_config/spec_config",
     "//foundation/communication/dsoftbus//core/common/dfx/hidumper_adapter/include",
+    "//foundation/communication/dsoftbus//core/discovery/manager/include",
+    "//foundation/communication/dsoftbus//core/bus_center/lnn/net_ledger/local_ledger/include",
+    "//foundation/communication/dsoftbus//core/bus_center/lnn/net_ledger/common/include",
     "//third_party/cJSON",
   ]
 
