--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -30,7 +30,11 @@ group("unittest") {
     deps += [ "ble:softbus_conn_ble_test" ]
   }
   if (dsoftbus_feature_conn_p2p) {
-    deps += [ "p2p:softbus_connection_p2p_test" ]
+    deps += [
+      "p2p:softbus_connection_p2p_test",
+      "p2p/common_mock:P2pCommonMockTest",
+      "p2p/interface_mock:P2pInterfaceMockTest",
+    ]
   }
   if (dsoftbus_feature_conn_tcp) {
     deps += [ "tcp:softbus_tcp_manager_test" ]
