--- a/core/common/BUILD.gn
+++ b/core/common/BUILD.gn
@@ -99,7 +99,7 @@ if (defined(ohos_lite)) {
       defines = [ "SOFTBUS_MINI_SYSTEM" ]
       defines += [ "__STDC_FORMAT_MACROS" ]
     } else {
-      defines = [ "DEFAULT_STORAGE_PATH=\"/usr\"" ]
+      defines = [ "DEFAULT_STORAGE_PATH=\"/storage/data\"" ]
       defines += [ "__STDC_FORMAT_MACROS" ]
       defines += [ "SOFTBUS_SMALL_SYSTEM" ]
     }
