--- a/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -241,5 +241,9 @@ ohos_unittest("TransTcpDirectMessageTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":TransTcpDirectCoreTest", ":TransTcpDirectTest", ":TransTcpDirectMessageTest"]
+  deps = [
+    ":TransTcpDirectCoreTest",
+    ":TransTcpDirectMessageTest",
+    ":TransTcpDirectTest",
+  ]
 }
