fix:修改LNNTest gn文件
Signed-off-by: chenbotong <chenbotong1@huawei.com>

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -108,13 +108,7 @@ ohos_unittest("LNNTest") {
 
 ohos_unittest("LNNNetBuilderTest") {
   module_out_path = module_output_path
-  sources = [
-    "net_builder/src/lnn_auth_mock.cpp",
-    "net_builder/src/lnn_net_builder_deps_mock.cpp",
-    "net_builder/src/lnn_net_builder_test.cpp",
-    "net_builder/src/lnn_net_ledger_mock.cpp",
-    "net_builder/src/lnn_service_mock.cpp",
-  ]
+  sources = [ "net_builder/src/lnn_net_builder_test.cpp" ]
 
   include_dirs = [
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
