add disc manager UT and ipc client proxy UT
Signed-off-by: wuchunbo <wuchunbo1@huawei.com>

--- a/tests/core/discovery/BUILD.gn
+++ b/tests/core/discovery/BUILD.gn
@@ -25,11 +25,12 @@ has_enhance_test = exec_script("$dsoftbus_root_path/check_sub_module.py",
 
 group("unittest") {
   testonly = true
-  deps = [ "manager:unittest" ]
+  deps = [ "manager/unittest:unittest" ]
   if (dsoftbus_feature_disc_ble) {
     deps += [
       "ble/dispatcher:unittest",
       "ble/softbus_ble_mock:unittest",
+      "ipc:unittest",
     ]
   }
   if (dsoftbus_feature_disc_coap) {
