修改监视意见 Signed-off-by: wangyb0625 <wangyibo38@huawei.com>

--- a/tests/core/transmission/BUILD.gn
+++ b/tests/core/transmission/BUILD.gn
@@ -17,7 +17,9 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 group("unittest") {
   testonly = true
   deps = [
+    "common:unittest",
     "trans_channel/auth_channel:unittest",
+    "trans_channel/manager:unittest",
     "trans_channel/proxy_channel:unittest",
     "trans_channel/tcp_direct:unittest",
     "trans_channel/udp_negotiation:unittest",
