--- a/tests/core/common/BUILD.gn
+++ b/tests/core/common/BUILD.gn
@@ -18,6 +18,7 @@ group("unittest") {
   testonly = true
   deps = [
     "anonymize:unittest",
+    "dfx/hidumper_adapter/unittest:unittest",
     "dfx/hisysevent_adapter/unittest:unittest",
     "log:unittest",
     "sequence_verification:unittest",
