--- a/tests/core/discovery/ipc/BUILD.gn
+++ b/tests/core/discovery/ipc/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -15,29 +15,36 @@ import("//build/lite/config/component/lite_component.gni")
 import("//build/ohos.gni")
 import("//build/test.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("//foundation/communication/dsoftbus/tests/utils/utils.gni")
 
 module_output_path = "dsoftbus/discovery"
 
-ohos_unittest("DiscManagerTest") {
+ohos_unittest("DiscClientProxyTest") {
   module_out_path = module_output_path
-  sources = [ "unittest/disc_manager_test.cpp" ]
+  sources = [
+    "$dsoftbus_core_path/discovery/ipc/standard/src/disc_client_proxy.cpp",
+    "$dsoftbus_core_path/discovery/ipc/standard/src/disc_client_proxy_standard.cpp",
+    "$dsoftbus_root_path/sdk/frame/standard/src/if_softbus_client.cpp",
+    "client_info_manager_mock.cpp",
+    "disc_client_proxy_test.cpp",
+    "remote_object_mock.cpp",
+  ]
+  sources += test_utils_src
 
   include_dirs = [
-    "$softbus_adapter_common/include",
-    "$dsoftbus_root_path/core/common/include",
-    "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_core_path/discovery/ipc/include",
+    "$dsoftbus_core_path/discovery/ipc/standard/include",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/interfaces/kits/discovery",
-    "$dsoftbus_root_path/core/discovery/manager/include",
-    "$dsoftbus_root_path/core/discovery/coap/include",
-    "//commonlibrary/c_utils/base/include",
-    "unittest/common/",
-    "$dsoftbus_root_path/components/nstackx/nstackx_ctrl/interface",
+    "$dsoftbus_root_path/sdk/frame/standard/include/",
+    "$dsoftbus_core_path/common/include",
+    "$dsoftbus_core_path/frame/standard/client_manager/include",
+    "$softbus_adapter_common/include",
   ]
+  include_dirs += test_utils_inc
 
   deps = [
-    "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl",
-    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//third_party/googletest:gmock",
     "//third_party/googletest:gtest_main",
   ]
 
@@ -52,9 +59,10 @@ ohos_unittest("DiscManagerTest") {
       "hilog:libhilog",
     ]
   }
+  external_deps += [ "ipc:ipc_core" ]
 }
 
 group("unittest") {
   testonly = true
-  deps = [ ":DiscManagerTest" ]
+  deps = [ ":DiscClientProxyTest" ]
 }
