--- a/dsoftbus.gni
+++ b/dsoftbus.gni
@@ -20,6 +20,7 @@ dsoftbus_root_path = "//foundation/communication/dsoftbus"
 dsoftbus_sdk_path = "//foundation/communication/dsoftbus/sdk"
 dsoftbus_core_path = "//foundation/communication/dsoftbus/core"
 ability_base_path = "//foundation/ability/ability_base"
+dsoftbus_test_path = "//foundation/communication/dsoftbus/tests"
 
 declare_args() {
   softbus_adapter_common = "//foundation/communication/dsoftbus/adapter/common"
