--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -155,6 +155,10 @@ if (defined(ohos_lite)) {
     part_name = "dsoftbus"
   }
   ohos_shared_library("softbus_server") {
+    sanitize = {
+      cfi = true
+      debug = true
+    }
     defines = AUTH_SERVER_DEFINES
     defines += [ "__STDC_FORMAT_MACROS" ]
     include_dirs = dsoftbus_server_common_inc
