--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -152,6 +152,7 @@ if (defined(ohos_lite)) {
       "monitor_permission_test:MonitorPermission",
       "permission:DynamicPermissionTest",
       "udp/distributed_stream:distributed_stream_test",
+      "udp/file:unittest",
     ]
   }
 }
