--- a/tests/core/common/message_handler/unittest/BUILD.gn
+++ b/tests/core/common/message_handler/unittest/BUILD.gn
@@ -20,6 +20,6 @@ static_library("softbus_test_message_handler") {
     "$dsoftbus_root_path/core/common/message_handler/include",
     "$dsoftbus_root_path/core/common/include",
     "$softbus_adapter_common/include",
-    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
+    "$hilog_lite_include_path",
   ]
 }
